# SNNSimulatorComparison

./: .gitignore  .gitmodules  Brunel10KBenchmark.sh  BrunelBenchmark.sh  README.md  VogelsAbbottBenchmark.sh  conda_req.txt  run_benchmarks.sh
Benchmarks/Brunel/: createConnectivity.sh
Benchmarks/Brunel/ANNarchy/: Brunel10K.py
Benchmarks/Brunel/Spike/: Brunel10K.cpp  CMakeLists.txt  compile.sh
Benchmarks/Brunel/_results/: BrunelWeightAnalysis.ipynb  plotting.py
Benchmarks/Brunel/auryn/: Makefile  compile.sh  sim_brunel2k_pl.cpp
Benchmarks/Brunel/brian2/: Brunel10K.py
Benchmarks/Brunel/genn/: lif.h  matLoader.h  model.cc  parameters.h  simulator.cc  stdp_multiplicative.h
Benchmarks/Brunel/pyNest/: Brunel10K.py
Benchmarks/Brunel10K/ANNarchy/: Brunel10K.py
Benchmarks/Brunel10K/Spike/: Brunel10K.cpp
Benchmarks/Brunel10K/_results/: plotting.py
Benchmarks/Brunel10K/auryn/: sim_brunel2k_pl.cpp
Benchmarks/VogelsAbbott/: ee.wmat  ei.wmat  ie.wmat  ii.wmat
Benchmarks/VogelsAbbott/ANNarchy/: COBA.py
Benchmarks/VogelsAbbott/Spike/: CMakeLists.txt  VogelsAbbottNet.cpp  compile.sh
Benchmarks/VogelsAbbott/_results/: SimulatorComparisons.ipynb  plotting.py
Benchmarks/VogelsAbbott/auryn/: Makefile  compile.sh  sim_coba_benchmark  sim_coba_benchmark.cpp
Benchmarks/VogelsAbbott/brian2/: COBA.py  CUBA.py
Benchmarks/VogelsAbbott/brian2genn/: COBA.py
Benchmarks/VogelsAbbott/genn/: Makefile  compile.sh  lif.h  matLoader.h  model.cc  parameters.h  simulator.cc  spike_csv_recorder.h  timer.h
Benchmarks/VogelsAbbott/nest-simulator/: coba.sli
(+6 files in other folders)
